<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/rl1"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvHeader1"
            android:text="@string/nisn_hasil"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ln1"
            android:textColor="#000000"
            android:background="#FFE600"
            android:padding="4dp"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvHeader2"
            android:text="@string/nama_hasil"
            android:layout_width="180dp"
            android:layout_below="@+id/ln1"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvHeader1"
            android:textColor="#000000"
            android:background="#FFE600"
            android:padding="4dp"
            android:gravity="center"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvHeader3"
            android:text="@string/score_hasil"
            android:layout_width="90dp"
            android:layout_below="@+id/ln1"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tvHeader2"
            android:textColor="#000000"
            android:background="#FFE600"
            android:padding="4dp"
            android:gravity="center"
            android:textStyle="bold"/>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:layout_toEndOf="@+id/tvHeader3"
            android:background="#FFE600"
            android:orientation="horizontal"/>

        <ListView
            android:id="@+id/lvLog"
            android:layout_below="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </ListView>

    </RelativeLayout>


</RelativeLayout>