<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Home">

    <!--<TextView-->
        <!--android:text="@string/spk_penerimaan_beasiswa_header"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="60dp"-->
        <!--android:textStyle="bold"-->
        <!--android:textColor="#000000"-->
        <!--android:textSize="20sp"-->
        <!--android:fontFamily="serif"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->

    <ImageView
        android:id="@+id/imgTogas"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/icon_home"
        android:layout_width="100dp"
        android:layout_height="100dp" />

    <TextView
        android:text="B E A S I S W A"
        android:layout_below="@+id/imgTogas"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp"
        android:fontFamily="serif-monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnToKeputusan"
        android:text="@string/keputusan_home"
        android:background="@drawable/button"
        android:layout_above="@+id/btnToPetunjuk"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnToPetunjuk"
        android:text="@string/instruksi_pemakaian_home"
        android:layout_centerInParent="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnToDevelope"
        android:text="@string/creator_pacul"
        android:background="@drawable/button"
        android:layout_below="@+id/btnToPetunjuk"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="T O P S I S"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20sp"
        android:fontFamily="serif-monospace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>